--- a/MovieDb/MovieDb.csproj
+++ b/MovieDb/MovieDb.csproj
@@ -6,14 +6,31 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\Filmes\**" />
+    <Content Remove="Views\Filmes\**" />
+    <EmbeddedResource Remove="Views\Filmes\**" />
+    <None Remove="Views\Filmes\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.10">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.11">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Views\Filmes\Categoria.cshtml" />
+    <None Include="Views\Filmes\Create.cshtml" />
+    <None Include="Views\Filmes\Delete.cshtml" />
+    <None Include="Views\Filmes\Details.cshtml" />
+    <None Include="Views\Filmes\Edit.cshtml" />
+    <None Include="Views\Filmes\Favoritos.cshtml" />
+    <None Include="Views\Filmes\Index.cshtml" />
   </ItemGroup>
 
 </Project>
